# linux_learning

./: README.md
IPC/mutex/MUTEX_RECURSIVE/: recsig.c
IPC/mutex/MUTEX_ROBUST/: Makefile  README.md  init.c  pub.h  rbstbuyticket.c  simple_demo.c
IPC/mutex/PROCESS_SHARED/: Makefile  README.md  buyticket.c  destroy.c  init.c  pub.h
IPC/shm/posix/: reader.c  writer.c
IPC/shm/sys_v/: reader.c  writer.c
all/: timespan.c
cmake_pratice/t1/: CMakeLists.txt  main.c
cmake_pratice/t2/: CMakeLists.txt
cmake_pratice/t2/src/: CMakeLists.txt  main.c
cmake_pratice/t3/lib/: CMakeLists.txt
device_driver/mmap/: app-mmap.c
device_driver/mmap/memdev/: Makefile  memdev.c  memdev.h  memdev.ko
device_driver/simple_demo/hello/: Makefile  hello.c  hellomodule.ko
extern_C/c_call_cpp/: a.out  cFile.c  cppExample.cpp  cppExample.h
extern_C/cpp_call_c/: a.out  cExample.c  cExample.h  cppFile.cpp
extern_C/demo1/: main.cpp  test_extern_c.c  test_extern_c.h
log/: log.c
log/zlog/: test_hello.c  test_hello.conf
log/zlog_test/: CMakeLists.txt  test.c
log/zlog_test/zlog/: libzlog.so.1.2  zlog.conf
process/get_pro_id_by_name/cmdline/: main.c  test.c
process/get_pro_id_by_name/popen_ps/: main.c
process/get_pro_id_by_name/status/: main.c
thread/mutex/: robust.c
thread/rwlock/demo1/: main.c
timer/SIGALRM_alarm/: main.c
timer/rtc/: main.c
timer/select/: main.c
timer/thread_sleep/: main.c
