# 设置源文件
SET(LIBHELLO_SRC hello.c)

# 显示提示消息
MESSAGE(STATUS "SOURCE dir : " ${PROJECT_SOURCE_DIR})
MESSAGE(STATUS "BINARY dir : " ${PROJECT_BINARY_DIR})

# 设置输出库的路径
# SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

# 添加动态库
ADD_LIBRARY(hello SHARED ${LIBHELLO_SRC})

# 添加静态库
ADD_LIBRARY(hello_static STATIC ${LIBHELLO_SRC})
# 设置输出的名称
SET_TARGET_PROPERTIES(hello_static PROPERTIES OUTPUT_NAME "hello")
GET_TARGET_PROPERTY(OUTPUT_VALUE hello_static OUTPUT_NAME)
MESSAGE(STATUS "This is the hello_static OUTPUT_NAME:" ${OUTPUT_VALUE})

# 防止 清理同名的库
SET_TARGET_PROPERTIES(hello PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(hello_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

# 设置动态库版本号
SET_TARGET_PROPERTIES(hello PROPERTIES VERSION 1.2 SOVERSION 1)

# 设置安装文件和路径
INSTALL(TARGETS hello hello_static
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib
)
INSTALL(FILES hello.h DESTINATION include/hello)